--- a/front/scss/style.scss
+++ b/front/scss/style.scss
@@ -25,6 +25,14 @@
 
 /*–––––––––––––––mixins–––––––––––––––*/
 
+@mixin input {
+  border-radius: 4px;
+  padding-left: 10px;
+  font-size: 14px;
+  padding-block: 8px;
+  border: 1.5px solid rgba(0, 0, 0, 0.1);
+}
+
 /*–––––––––––––––GLOBAL–––––––––––––––*/
 
 body {
@@ -402,7 +410,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  // align-items: center;
   height: 100%;
   font-size: 14px;
   gap: 20px;
@@ -437,28 +444,20 @@ body {
     border: 1.5px solid rgba(0, 0, 0, 0.1);
   }
 
-  &__email-title {
-  }
+  // &__email-title {
+  // }
 
   &__email-input {
     margin-bottom: 10px;
-    border-radius: 4px;
-    padding-left: 10px;
-    font-size: 14px;
-    padding-block: 8px;
-    border: 1.5px solid rgba(0, 0, 0, 0.1);
+    @include input();
   }
 
-  &__password-title {
-  }
+  // &__password-title {
+  // }
 
   &__password-input {
     border-radius: 4px;
-    padding-left: 10px;
-    font-size: 14px;
-    padding-block: 8px;
-    margin-bottom: 5px;
-    border: 1.5px solid rgba(0, 0, 0, 0.1);
+    @include input();
   }
 
   &__sign-in {
@@ -492,4 +491,141 @@ body {
       }
     }
   }
+}
+
+/*––––––––––––––––––––––––––––––*/
+/*–––––––––––––––REGISTER–––––––––––––––*/
+/*––––––––––––––––––––––––––––––*/
+
+.reg {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 14px;
+  gap: 20px;
+  width: 320px;
+  margin: auto;
+
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 10;
+  transform: translate(-50%, -50%);
+
+  &__title {
+    text-align: center;
+    font-weight: 300;
+    font-family: "Montserrat";
+    font-size: 24px;
+  }
+
+  &__form {
+    background: #edf9fc;
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border-radius: 4px;
+
+    border: 1.5px solid rgba(0, 0, 0, 0.1);
+    z-index: 10;
+  }
+
+  // &__email-title {
+  // }
+
+  &__email-input {
+    @include input();
+    margin-bottom: 17px;
+  }
+
+  // &__password-title {
+  // }
+
+  &__password-input {
+    @include input();
+  }
+
+  &__password-show {
+    margin-bottom: 17px;
+    height: 15px;
+    width: 15px;
+    margin-left: 4px;
+    // text-align: left;
+    position: relative;
+
+    &::after {
+      content: "Показать пароль";
+      position: absolute;
+      top: 0;
+      right: -110px;
+    }
+  }
+
+  // &__name-title {
+  // }
+
+  &__name-input {
+    @include input();
+    margin-bottom: 17px;
+    display: block;
+  }
+
+  // &__surname-title {
+  // }
+
+  &__surname-input {
+    @include input();
+    margin-bottom: 17px;
+  }
+
+  &__submit {
+    display: block;
+
+    color: #fff;
+    background: #31a8a8;
+    padding-block: 8px;
+    border-radius: 4px;
+    border: 1.5px solid rgba(0, 0, 0, 0.1);
+    font-weight: 700;
+
+    &:hover {
+      background: #2c8297;
+    }
+  }
+
+  &__logn {
+    padding-block: 20px;
+    border-radius: 4px;
+    text-align: center;
+    margin-bottom: 15%;
+    background: #fff;
+    border: 1.5px solid rgba(0, 0, 0, 0.1);
+  }
+
+  &__login-text {
+    a {
+      color: var(--color-accent-fg);
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
+.bg {
+  height: 100%;
+  width: 100%;
+  // position: absolute;
+  // top: 0;
+  // left: 0;
+  z-index: -10;
+  overflow: hidden;
+}
+
+.particles-js-canvas-el {
+  z-index: -10;
+  height: 100% !important;
+  width: 100% !important;
 }
