links now working

--- a/Idea_platform/main/templates/main/login.html
+++ b/Idea_platform/main/templates/main/login.html
@@ -24,7 +24,7 @@
   </form>
   <div class="login__reg">
     <div class="login__reg-text">
-      Впервые здесь? <a href="#"> Создайте аккаунт. </a>
+      Впервые здесь? <a href="{% url 'reg' %}"> Создайте аккаунт. </a>
     </div>
   </div>
 </main>
