--- a/Idea_platform/main/templates/main/reg.html
+++ b/Idea_platform/main/templates/main/reg.html
@@ -44,7 +44,7 @@
     </form>
     <div class="reg__logn">
       <div class="reg__login-text">
-        У вас уже есть аккаунт? <a href="#"> Войти → </a>
+        У вас уже есть аккаунт? <a href="{% url 'login' %}"> Войти → </a>
       </div>
     </div>
   </main>
