--- a/Idea_platform/main/templates/main/index.html
+++ b/Idea_platform/main/templates/main/index.html
@@ -9,14 +9,14 @@
 <div class="header">
   <div class="container">
     <div class="header__logo">Тут должно быть лого</div>
-    <button class="header__add-project-button button">
+    <a href="{% url 'add_project' %}" class="header__add-project-button button">
       Добавить проект
-    </button>
+    </a>
     <div class="header__buttons">
-      <button class="header__register-button button">
+      <a href="{% url 'reg' %}" class="header__register-button button">
         Зарегистрироваться
-      </button>
-      <button class="header__login-button button">Войти</button>
+      </a>
+      <a href="{% url 'login' %}" class="header__login-button button">Войти</a>
     </div>
     <a href="#" class="header__profile">
       <div class="header__profile-link">Личный кабинет</div>
