--- a/Idea_platform/main/templates/main/base.html
+++ b/Idea_platform/main/templates/main/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>reg</title>
+    <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <script src="{% static 'js/jquery-3.6.1.min.js' %}"></script>
     {% block content2 %} {% endblock %}
