--- a/Idea_platform/main/static/css/style.css
+++ b/Idea_platform/main/static/css/style.css
@@ -128,7 +128,7 @@ body {
   border: 2px solid var(--alt-color);
   padding: 8px 12px;
   border-radius: 5px;
-  background-color: #fff;
+  background-color: rgb(232, 232, 232);
   filter: drop-shadow(0 0 3px var(--alt-color));
   font-size: var(--font-size-normal);
   transition: all 0.2s;
@@ -197,6 +197,7 @@ body {
 .header__add-project-button {
   background: #fff;
   filter: drop-shadow(0 0 10px var(--sec-color));
+  background-color: rgb(108, 217, 89);
 }
 .header__buttons {
   display: flex;
@@ -405,11 +406,15 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
   font-size: 14px;
   gap: 20px;
   width: 320px;
   margin: auto;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 10;
+  transform: translate(-50%, -50%);
 }
 .login__logo div {
   background: rgba(0, 0, 0, 0.1) center no-repeat;
@@ -425,7 +430,7 @@ body {
   text-align: center;
 }
 .login__from {
-  background: rgba(80, 222, 132, 0.1);
+  background: #edfcf2;
   padding: 16px;
   display: flex;
   flex-direction: column;
@@ -461,6 +466,7 @@ body {
   background: #2c974b;
 }
 .login__reg {
+  background: #fff;
   padding-block: 20px;
   border-radius: 4px;
   text-align: center;
@@ -534,6 +540,7 @@ body {
   position: absolute;
   top: 0;
   right: -110px;
+  color: var(--text-color);
 }
 .reg__name-input {
   border-radius: 4px;
