--- a/Idea_platform/main/templates/main/index.html
+++ b/Idea_platform/main/templates/main/index.html
@@ -1,6 +1,8 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
+{% block title %} Idea platform {% endblock %}
+
 {% block content2 %}
 <script src="{% static 'js/script.js' %}" defer></script>
 {% endblock %}
