--- a/Idea_platform/main/templates/main/login.html
+++ b/Idea_platform/main/templates/main/login.html
@@ -1,31 +1,42 @@
 {% extends 'main/base.html' %}
-{% block content %}    
-<main class="login">
-  <div class="login__logo">
-    <div></div>
-  </div>
-  <h1 class="login__title">Авторизация</h1>
-  <form class="login__from">
-    <h3 class="login__email-title">Электронная почта</h3>
-    <input
-      type="email"
-      placeholder="Введите почту"
-      name="email"
-      class="login__email-input"
-    />
-    <h3 class="login__password-title">Пароль</h3>
-    <input
-      type="password"
-      placeholder="Введите пароль"
-      name="password"
-      class="login__password-input"
-    />
-    <button class="login__sign-in">Войти</button>
-  </form>
-  <div class="login__reg">
-    <div class="login__reg-text">
-      Впервые здесь? <a href="{% url 'reg' %}"> Создайте аккаунт. </a>
+{% load static %}
+
+{% block title %}login{% endblock %}
+
+{% block content2 %}
+<script src="{% static 'js/particles.js' %}"></script>
+<script src="{% static 'js/reg.js' %}" defer></script>
+{% endblock %}
+
+{% block content %}   
+<div id="particles-js" class="bg"> 
+  <main class="login">
+    <div class="login__logo">
+      <div></div>
     </div>
-  </div>
-</main>
+    <h1 class="login__title">Авторизация</h1>
+    <form class="login__from">
+      <h3 class="login__email-title">Электронная почта</h3>
+      <input
+        type="email"
+        placeholder="Введите почту"
+        name="email"
+        class="login__email-input"
+      />
+      <h3 class="login__password-title">Пароль</h3>
+      <input
+        type="password"
+        placeholder="Введите пароль"
+        name="password"
+        class="login__password-input"
+      />
+      <button class="login__sign-in">Войти</button>
+    </form>
+    <div class="login__reg">
+      <div class="login__reg-text">
+        Впервые здесь? <a href="{% url 'reg' %}"> Создайте аккаунт. </a>
+      </div>
+    </div>
+  </main>
+</div>
 {% endblock %}
