--- a/Idea_platform/main/templates/main/reg.html
+++ b/Idea_platform/main/templates/main/reg.html
@@ -1,6 +1,8 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
+{% block title %}reg{% endblock %}
+
 {% block content2 %}
 <script src="{% static 'js/particles.js' %}"></script>
 <script src="{% static 'js/reg.js' %}" defer></script>
