register and login v0.1

--- a/Idea_platform/main/templates/main/index.html
+++ b/Idea_platform/main/templates/main/index.html
@@ -30,6 +30,7 @@
   <div class="container">
     <input
       placeholder="Введите ключевые слова"
+      type="search"
       class="search-panel__search input"
     />
     <button class="search-panel__button button">Поиск</button>
