--- a/Idea_platform/main/templates/main/index.html
+++ b/Idea_platform/main/templates/main/index.html
@@ -11,7 +11,7 @@
 <div class="header">
   <div class="container">
     <div class="header__logo">Тут должно быть лого</div>
-    <a href="{% url 'add_project' %}" class="header__add-project-button button">
+    <a href="{% url 'add_idea' %}" class="header__add-project-button button">
       Добавить проект
     </a>
     <div class="header__buttons">
