--- a/Idea_platform/main/static/css/style.css
+++ b/Idea_platform/main/static/css/style.css
@@ -208,25 +208,12 @@ body {
   display: flex;
   gap: 5px;
 }
-.header__profile {
-  display: none;
-}
 .header__profile-link {
   position: relative;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.header__profile-link::before {
-  content: "";
-  position: absolute;
-  top: -50%;
-  left: -30%;
-  border-radius: 100vh;
-  height: 30px;
-  width: 30px;
-  background-color: #9d9d9d;
 }
 
 /*–––––––––––––––search–––––––––––––––*/
@@ -443,21 +430,16 @@ body {
   border-radius: 4px;
   border: 1.5px solid rgba(0, 0, 0, 0.1);
 }
-.login__email-input {
-  margin-bottom: 10px;
-  border-radius: 4px;
-  padding-left: 10px;
-  font-size: 14px;
-  padding-block: 8px;
+.login input {
   border: 1.5px solid rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  padding: 10px;
+  width: 100%;
+  font-family: sans-serif !important;
+  font-size: 14px;
 }
-.login__password-input {
-  border-radius: 4px;
-  border-radius: 4px;
-  padding-left: 10px;
-  font-size: 14px;
-  padding-block: 8px;
-  border: 1.5px solid rgba(0, 0, 0, 0.1);
+.login input__label {
+  display: block;
 }
 .login__sign-in {
   color: #fff;
@@ -466,6 +448,7 @@ body {
   border-radius: 4px;
   border: 1.5px solid rgba(0, 0, 0, 0.1);
   font-weight: 700;
+  margin-top: 20px;
 }
 .login__sign-in:hover {
   background: #2c974b;
