--- a/Idea_platform/main/static/scss/style.scss
+++ b/Idea_platform/main/static/scss/style.scss
@@ -815,3 +815,53 @@ body {
     }
   }
 }
+
+/*––––––––––––––––––––––––––––––*/
+/*–––––––––––––––ADD_IDEA–––––––––––––––*/
+/*––––––––––––––––––––––––––––––*/
+
+.add-idea {
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
+
+  &__title{
+    text-align: center;
+    font-size: var(--font-size-title);
+    font-weight: 700;
+    padding-block: 40px;
+  }
+
+  &__form {
+    background: #edfcf2;
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border-radius: 4px;
+    width: 80%;
+
+    border: 1.5px solid rgba(0, 0, 0, 0.1);
+
+    input {
+      @include input();
+    }
+
+    textarea{
+      resize: none;
+      @include input();
+      height: 10vh;
+    }
+
+    select {
+      @include input();
+    }
+  }
+}
+
+
